<?xml version="1.0"?>
<package format="2">
  <name>rosvino</name>
  <version>0.0.0</version>
  <description>The rosvino package</description>

  <maintainer email="turtlebot@todo.todo">turtlebot</maintainer>

  <license>TODO</license>


  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
 
  <buildtool_depend>catkin</buildtool_depend>  

  <build_depend>OpenCV</build_depend>
  <build_depend>InferenceEngine</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>OpenCV</build_export_depend>
  <build_export_depend>InferenceEngine</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>OpenCV</exec_depend>
  <exec_depend>InferenceEngine</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <build_depend>roslaunch</build_depend>
  <build_export_depend>roslaunch</build_export_depend>
  <exec_depend>roslaunch</exec_depend>
  <build_depend>roslint</build_depend>
  <build_depend>topic_tools</build_depend>
  <build_export_depend>roslint</build_export_depend>
  <build_export_depend>topic_tools</build_export_depend>
  <exec_depend>roslint</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
